--- a/Node.js/dynamic routes & advanced methods/package.json
+++ b/Node.js/dynamic routes & advanced methods/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "mongodb": "^6.5.0",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1"
   }
