--- a/Node.js/dynamic routes & advanced methods/package.json
+++ b/Node.js/dynamic routes & advanced methods/package.json
@@ -23,6 +23,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.13",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^6.37.1"
   }
 }
