--- a/Node.js/dynamic routes & advanced methods/package.json
+++ b/Node.js/dynamic routes & advanced methods/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.9.2",
     "nodemailer": "^6.9.13",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "stripe": "^15.7.0"
   }
 }
